# gobuengine

./: .gitignore  .gitmodules  LICENSE  README.md  bbuild.sh  build_run.sh  meson.build  meson_options.txt
Gobu/engine/app/: config.h  gapp.c  gapp_config.c  gapp_config.h  gapp_widget.c  gapp_widget.h  meson.build  template.h
Gobu/engine/editor/: browser.c  browser.h  config.h  gapp_extrasprites.c  gapp_extrasprites.h  gapp_gobu_embed.c  gapp_gobu_embed.h  gapp_inspector.c  gapp_level_editor.c  gapp_level_editor.h  gapp_level_inspector.c  gapp_level_inspector.h  gapp_level_outliner.c  gapp_level_outliner.h  gapp_level_viewport.c  gapp_level_viewport.h  gapp_main.c  gapp_main.h  gapp_script_editor.c  gapp_script_editor.h  gapp_settings.c  gapp_settings.h  gapp_settings_last_m_.c  gapp_settings_last_m_.h  gapp_tool_console.c  gapp_tool_console.h  gapp_widget.c  gapp_widget.h  gbapp_asheets.c  gbapp_asheets.h  gbapp_asprites_editor.c  gbapp_asprites_editor.h  gbapp_template.c  gbapp_template.h  meson.build  project_editor.c  project_editor.h  project_manager.c  project_manager.h  project_manager_fn.c  (+5 more)
Gobu/engine/gobu/: gb_ecs.h  gb_ecs_animate_sprite.c  gb_ecs_animate_sprite.h  gb_ecs_bounding.c  gb_ecs_bounding.h  gb_ecs_camera.c  gb_ecs_camera.h  gb_ecs_gizmos.c  gb_ecs_gizmos.h  gb_ecs_rendering.c  gb_ecs_resource.c  gb_ecs_resource.h  gb_ecs_sprite.c  gb_ecs_sprite.h  gb_ecs_text.c  gb_ecs_text.h  gb_fs.c  gb_fs.h  gb_gfx.c  gb_gfx.h  gb_input.c  gb_input.h  gb_log.h  gb_path.c  gb_path.h  gb_project.c  gb_project.h  gb_setting.c  gb_setting.h  gb_string.c  gb_string.h  gb_type_animate_sprite.c  gb_type_animate_sprite.h  gb_type_bounding.c  gb_type_bounding.h  gb_type_camera.c  gb_type_camera.h  gb_type_color.c  gb_type_color.h  gb_type_gizmos.c  (+22 more)
Gobu/engine/gobue/: gobu_autorotate.c  gobu_bounding.c  gobu_bounding.h  gobu_camera.c  gobu_camera.h  gobu_controller.h  gobu_custom.c  gobu_custom.h  gobu_ecs.c  gobu_ecs.h  gobu_gizmos.c  gobu_gizmos.h  gobu_gobu.c  gobu_gobu.h  gobu_input.c  gobu_input.h  gobu_physics.c  gobu_project.c  gobu_project.h  gobu_rendering.c  gobu_rendering.h  gobu_resource.c  gobu_resource.h  gobu_shapes.c  gobu_shapes.h  gobu_sprite.c  gobu_sprite.h  gobu_text.c  gobu_tilingsprite.c  gobu_transform.c  gobu_transform.h  gobu_utility.c  gobu_utility.h  meson.build
src/GobuApp/: config.h  gapp.c  gapp.h  gapp_browser.c  gapp_browser.h  gapp_browser_filete.h  gapp_common.c  gapp_common.h  gapp_components.c  gapp_components.h  gapp_hierarchy.c  gapp_hierarchy.h  gapp_inspector.c  gapp_inspector.h  gapp_inspector_widgets.c  gapp_inspector_widgets.h  gapp_level_editor.c  gapp_level_editor.h  gapp_level_inspector.c  gapp_level_inspector.h  gapp_level_outliner.c  gapp_level_outliner.h  gapp_prefab.c  gapp_prefab.h  gapp_project_config.c  gapp_project_config.h  gapp_project_manager.c  gapp_project_manager.h  gapp_project_setting.c  gapp_project_setting.h  gapp_scene.c  gapp_scene.h  gapp_scene_hierarchy.c  gapp_scene_hierarchy.h  gapp_scene_manager.c  gapp_scene_manager.h  gapp_scene_viewport.c  gapp_scene_viewport.h  gapp_script.c  gapp_script.h  (+9 more)
src/GobuApp/olds/: gapp_project_config.c  gapp_project_config.h  gapp_project_setting.h  gapp_scene.c
src/GobuApp/types/: type_enum.c  type_enum.h  type_outliner_item.c  type_outliner_item.h
src/app/: config.h  gapp.c  gapp.h  gapp_browser.c  gapp_browser.h  gapp_common.c  gapp_common.h  gapp_config.c  gapp_config.h  gapp_editor.c  gapp_editor.h  gapp_inspector.c  gapp_inspector.h  gapp_inspector_entity.c  gapp_inspector_entity.h  gapp_inspector_widgets.c  gapp_inspector_widgets.h  gapp_level_editor.c  gapp_level_editor.h  gapp_level_inspector.c  gapp_level_outliner.c  gapp_level_outliner.h  gapp_outliner.c  gapp_outliner.h  gapp_project_config.c  gapp_project_config.h  gapp_project_manager.c  gapp_project_setting.c  gapp_script.c  gapp_script.h  gapp_viewport.c  gapp_viewport.h  gapp_widget.c  gapp_widget.h  meson.build
src/app/types/: gapp_itype_enum.c  gapp_itype_enum.h  type_outliner_item.c  type_outliner_item.h  type_outliner_popover_item.c  type_outliner_popover_item.h
src/bugo/: bugo.c  bugo.h  bugo_core.c  bugo_ecs.c  bugo_ecs.h  bugo_shape.c  bugo_text.c  meson.build
src/bugo/components/: bugo_bcamera2d.c  bugo_bcamera2d.h  bugo_bcolor.c  bugo_bcolor.h  bugo_blua.c  bugo_blua.h  bugo_brectangle.c  bugo_brectangle.h  bugo_bvector2.c  bugo_bvector2.h  bugo_camera2d.c  bugo_camera2d.h  bugo_camera_manager.c  bugo_camera_manager.h  bugo_color.c  bugo_color.h  bugo_components.h  bugo_draw_shape_rect.c  bugo_draw_shape_rect.h  bugo_draw_sprite.c  bugo_draw_sprite.h  bugo_phaser.c  bugo_phaser.h  bugo_rectangle.c  bugo_rectangle.h  bugo_renderer.c  bugo_renderer.h  bugo_shape_rect.c  bugo_shape_rect.h  bugo_sprite.c  bugo_sprite.h  bugo_stage.c  bugo_stage.h  bugo_vector2.c  bugo_vector2.h  bugo_wrap_renderer.c  (+2 more)
src/editor/: gapp.c  gapp.h  gapp_inspector_widgets.c  gapp_prefab.c  gapp_prefab.h  gapp_project_manager.c  gapp_scene_hierarchy.h  gapp_scene_manager.c  gapp_scene_viewport.c  gapp_scene_viewport.h  gapp_whierarchy.h  gapp_widget.h  gapp_wviewport.c  meson.build
src/gobu/: gobu-gobu.c  gobu-gobu.h  gobu-json.c  gobu-json.h  gobu-project.c  gobu-project.h  gobu.c  gobu.h  meson.build
src/gobu-app/: GobuWidgets.c  GobuWidgets.h  config.h  gobu-app.c  gobu-app.h  gobu_ecs_object.h  gobu_editor_world.c  gobu_editor_world.h  gobu_editor_world_browser.c  gobu_editor_world_browser.h  gobu_editor_world_inspector.h  gobu_editor_world_outliner.c  gobu_editor_world_outliner.h  gobu_editor_world_outliner_item_column.c  gobu_editor_world_outliner_item_column.h  gobu_editor_world_spriteanim.h  gobu_editor_world_tileeditor.h  gobu_editor_world_timeline.h  gobu_editor_world_viewport.c  gobu_editor_world_viewport.h  gobu_gobu_embed.c  gobu_gobu_embed.h  gobu_project_editor.c  gobu_project_editor.h  gobu_script_editor.c  gobu_script_editor.h  gobu_script_node_viewport.c  gobu_script_node_viewport.h  gobu_widget.c  gobu_widget.h  main.c  meson.build  project_manager.c  project_manager.h  version.h
(+337 files in other folders)
