project('gobuengine', 'c', version: '0.0.5', default_options:['warning_level=3'])
base_dir = meson.current_source_dir()

subdir('src')

# libgobuc = static_library('gobuc',
#     libgobuc_src,
#     dependencies: libgobuc_deps,
#     include_directories:['./libgobuc/thirdparty']
# )

# executable('gobueditor',
#     gobuapp_src,
#     dependencies: gobuapp_deps,
#     link_with: [libgobuc],
#     include_directories:['.'],
#     install : true,
#     install_dir:base_dir+'/bin/',
#     cpp_args : '-W -g'
# )
