subdir('thirdparty')

libcore_source = [
    files('gb_ecs_animate_sprite.c'),
    files('gb_ecs_bounding.c'),
    files('gb_ecs_camera.c'),
    files('gb_ecs_gizmos.c'),
    files('gb_ecs_rendering.c'),
    files('gb_ecs_resource.c'),
    files('gb_ecs_sprite.c'),
    files('gb_ecs_text.c'),
    files('gb_ecs.c'),
    files('gb_input.c'),
    files('gb_fs.c'),
    files('gb_gfx.c'),
    files('gb_path.c'),
    files('gb_string.c'),
    files('gb_project.c'),
    files('gb_setting.c'),
    files('gb_type_animate_sprite.c'),
    files('gb_type_bounding.c'),
    files('gb_type_camera.c'),
    files('gb_type_color.c'),
    files('gb_type_gizmos.c'),
    files('gb_type_rect.c'),
    files('gb_type_resource.c'),
    files('gb_type_shape_circle.c'),
    files('gb_type_shape_rect.c'),
    files('gb_type_sprite.c'),
    files('gb_type_text.c'),
    files('gb_type_texture.c'),
    files('gb_type_transform.c'),
    files('gb_type_vec2.c'),
    files('gobu.c'),
]
