subdir('thirdparty')

libcore_source = [
    files('systems/gb_ecs_animate_sprite.c'),
    files('systems/gb_ecs_bounding.c'),
    files('systems/gb_ecs_camera.c'),
    files('systems/gb_ecs_gizmos.c'),
    files('systems/gb_ecs_rendering.c'),
    files('systems/gb_ecs_resource.c'),
    files('systems/gb_ecs_sprite.c'),
    files('systems/gb_ecs_text.c'),
    files('components/gb_type_animate_sprite.c'),
    files('components/gb_type_bounding.c'),
    files('components/gb_type_camera.c'),
    files('components/gb_type_color.c'),
    files('components/gb_type_gizmos.c'),
    files('components/gb_type_rect.c'),
    files('components/gb_type_resource.c'),
    files('components/gb_type_shape_circle.c'),
    files('components/gb_type_shape_rect.c'),
    files('components/gb_type_sprite.c'),
    files('components/gb_type_text.c'),
    files('components/gb_type_texture.c'),
    files('components/gb_type_transform.c'),
    files('components/gb_type_vec2.c'),
    files('gb_ecs.c'),
    files('gb_input.c'),
    files('gb_fs.c'),
    files('gb_gfx.c'),
    files('gb_path.c'),
    files('gb_string.c'),
    files('gb_project.c'),
    files('gb_setting.c'),
    files('gobu.c'),
]
