message('Build module: ProjectManager')

module_project_manager = files([
    'gapp_pm_check_project_name_availability.c',
    'gapp_pm_create_project.c',
    'gapp_pm_open_project.c',
    'gapp_pm_select_folder_for_project.c',
    'gapp_pm_register_project.c',
    'gapp_pm_list_item_open_project.c',
    'gapp_project_manager.c',
])

