message('Build module: BrowserContent')

module_browser_content = files([
    'gapp-browser-view-file-delete.c',
    'gapp-browser-view-file-drop.c',
    'gapp-browser-view-file-factory.c',
    'gapp-browser-view-file-menupopup.c',
    'gapp-browser-view-file-nav.c',
    'gapp-browser-view-file-selected.c',
    'gapp-browser-view-file-sorting.c',
    'gapp-browser.c',
])

